# proman

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: streamlit_extension.py
frontend/: buttons.css
proman/: cli.py  config.py  environment.py  manager.py  paths.py  processes.py  server.py
proman/frontend/: index.html
